fixed header gradient bug on safari mobile

--- a/assets/styles/styles-programming.css
+++ b/assets/styles/styles-programming.css
@@ -416,9 +416,9 @@ small, .font_small {font-size: 0.75em;}
 }
 .header__wrapper {
     
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(70%, rgba(48,17,17,1)),color-stop(90%, rgba(255,255,255,0)));
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(65%, rgba(48,17,17,1)),color-stop(65%, rgba(255,255,255,0)));
     
-    background: linear-gradient(to bottom, rgba(48,17,17,1) 70%,rgba(255,255,255,0) 90%);
+    background: linear-gradient(to bottom, rgba(48,17,17,1) 65%,rgba(255,255,255,0) 65%);
     
     min-height: 100px;
     padding: 1rem 1rem 2rem 1rem;
