--- a/sources/styles/modules/_header.css
+++ b/sources/styles/modules/_header.css
@@ -11,7 +11,7 @@
 
   &__wrapper {
     
-    background: linear-gradient(to bottom, rgba(48,17,17,1) 70%,rgba(255,255,255,0) 90%);
+    background: linear-gradient(to bottom, rgba(48,17,17,1) 65%,rgba(255,255,255,0) 65%);
     
     min-height: 100px;
     padding: 1rem 1rem 2rem 1rem;
